# pizza_factory

./: .gitignore  Dockerfile  LICENSE  README.md  setup.cfg  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yml
.sqa/: config.yml  docker-compose.yml
docs/: conf.py  index.rst
docs/first_steps/: prerequisites.rst  rst-cheatsheet.rst
docs/tdd_tutorial/: functional_testing.rst  introduction.rst  unit_testing.rst
pizza_factory/: __init__.py  __main__.py  factory.py  ingredients.py  pizza.py
tests/: _test_do_not_do.py  recipes.yaml  test_factory.py  test_machine.py  test_pizzas.py
tests/factory_requirements/: test_factory.py  test_machine.py
tests/pizza_requirements/: test_doughs.py  test_pizzas.py  test_toppins.py
