[metadata]
name = template-py
version = 0.1.0
description = Template package for python projects
description-file = README.md
authors = 
  Borja Esteban
authors_email = 
  B.Esteban <borja.sanchis@kit.edu>
classifiers =
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires = 
  pyyaml

[options.entry_points]
console_scripts =
  cli_script = template.__main__:main

[build_sphinx]
project = template-py 
version = 0.1
release = 0.1.0
source-dir = docs

